--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,16 @@
+@keyframes headerAnimation {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
 header.main {
   background: #fff;
   padding: 2rem 0;
+  transition: all 0.15s ease-in-out;
   @media (min-width: 60rem) {
     height: 50vh;
     min-height: 25rem;
@@ -23,23 +33,69 @@ header.main {
       letter-spacing: 0.25em;
       text-transform: uppercase;
     }
-    .hamburger {
+    .burger {
+      height: 65px;
+      width: 65px;
+      top: 0px;
+      right: 0px;
+      z-index: 1000;
       cursor: pointer;
       span {
-        width: 40px;
-        height: 3px;
-        background: #000;
         display: block;
-        margin: 6px;
+        position: relative;
+        transform: translateY(8px);
+        transition: all 0ms 300ms;
+        margin: 0 auto;
+        top: 22px;
+        width: 40px;
+        height: 2px;
+        &:before {
+          content: "";
+          position: absolute;
+          width: 40px;
+          height: 3px;
+          background: #000;
+          left: 0;
+          bottom: 5px;
+          transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+            transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+          body.open & {
+            bottom: 0;
+            transform: rotate(-45deg);
+            transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
+              transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+          }
+        }
+        &::after {
+          content: "";
+          position: absolute;
+          width: 40px;
+          height: 3px;
+          background: #000;
+          left: 0;
+          top: 5px;
+          transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+            transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+          body.open & {
+            top: 0;
+            transform: rotate(45deg);
+            transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1),
+              transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+          }
+        }
       }
     }
   }
   main {
-    padding: 2rem 0;
+    .container {
+      display: flex;
+    }
     h2 {
       font-size: 3rem;
       line-height: 1.2em;
       max-width: 50rem;
+      transform: translateY(100%);
+      animation: headerAnimation 0.75s ease-in-out 0.5s 1 forwards;
     }
   }
 }
