--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -14,23 +14,25 @@
   @media (min-width: 60rem) {
     height: 50vh;
     min-height: 25rem;
+    overflow: hidden;
   }
   .item {
     flex: 0 0 100%;
     position: relative;
-    min-height: 50vh;
     transform: translateY(100%);
     overflow: hidden;
     background: #000;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 25vh;
+    @media (min-width: 60rem) {
+      flex: 0 0 calc(100% / 3);
+      height: 50vh;
+    }
     a {
       text-decoration: none;
       color: inherit;
-    }
-    @media (min-width: 60rem) {
-      flex: 0 0 calc(100% / 3);
     }
     .details {
       color: #fff;
