--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -20,12 +20,14 @@ header.main {
     min-height: 25rem;
   }
   .container {
+    height: 75px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
   }
   .top {
+    background: #fff;
     padding: 1rem 0;
     position: fixed;
     z-index: 100;
@@ -43,54 +45,43 @@ header.main {
       text-transform: uppercase;
       transition: color 0.25s ease-in-out;
     }
-    .burger {
-      height: 65px;
-      width: 65px;
-      top: 0px;
-      right: 0px;
-      z-index: 1000;
+    .nav-icon {
+      width: 30px;
+      height: 25px;
+      position: relative;
+      transform: rotate(0deg);
+      transition: all 0.4s ease-in-out;
       cursor: pointer;
       span {
         display: block;
-        position: relative;
-        transform: translateY(8px);
-        transition: all 0ms 300ms;
-        margin: 0 auto;
-        top: 22px;
-        width: 40px;
-        height: 2px;
-        &:before {
-          content: "";
-          position: absolute;
-          width: 40px;
-          height: 3px;
-          background: #000;
-          left: 0;
-          bottom: 5px;
-          transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
-            transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+        position: absolute;
+        height: 3px;
+        width: 100%;
+        background: #161616;
+        opacity: 1;
+        left: 0;
+        border-radius: 1px;
+        transform: rotate(0deg);
+        transition: 0.25s ease-in-out;
+        &:nth-child(1) {
+          top: 0px;
           body.open & {
-            bottom: 0;
-            transform: rotate(-45deg);
-            transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
-              transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            top: 10px;
+            transform: rotate(135deg);
           }
         }
-        &::after {
-          content: "";
-          position: absolute;
-          width: 40px;
-          height: 3px;
-          background: #000;
-          left: 0;
-          top: 5px;
-          transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
-            transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+        &:nth-child(2) {
+          top: 10px;
           body.open & {
-            top: 0;
-            transform: rotate(45deg);
-            transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1),
-              transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+            opacity: 0;
+            left: -60px;
+          }
+        }
+        &:nth-child(3) {
+          top: 20px;
+          body.open & {
+            top: 10px;
+            transform: rotate(-135deg);
           }
         }
       }
