--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -144,36 +144,52 @@ header.main {
       max-width: 60rem;
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
       justify-content: space-between;
+      flex-direction: column;
+      @media (min-width: 35rem) {
+        flex-direction: row;
+        align-items: center;
+      }
       .col {
         body.open & {
           animation: menuAnimation 0.25s ease-in-out 0s 1 forwards;
         }
         .info {
-          text-align: right;
-          font-size: 1rem;
+          font-size: 1.2rem;
           opacity: 0;
           body.open & {
-            animation: menuLinkAnimation 1s ease-in-out 1.25s 1 forwards;
+            animation: menuLinkAnimation 1s ease-in-out 1s 1 forwards;
           }
           h4 {
             font-size: 1.25rem;
             margin: 0 0 1rem;
           }
           p {
-            margin: 0 0 0.15rem;
+            margin: 0 0 0.5rem;
+          }
+          a {
+            color: #aaa;
+            &:hover {
+              text-decoration: underline;
+            }
           }
         }
         nav.main {
           display: flex;
           flex-direction: column;
-          margin-bottom: 2rem;
+          margin-top: 8rem;
+          @media (min-width: 60rem) {
+            margin-top: 0rem;
+            margin-bottom: 2rem;
+          }
           a {
-            font-size: 3rem;
-            padding: 2rem 0;
-            font-family: serif;
+            font-size: 2rem;
+            padding: 1.5rem 0;
             transition: all 0.15s ease-in-out;
+            @media (min-width: 60rem) {
+              font-size: 3rem;
+              padding: 2rem 0;
+            }
             &:nth-child(1) {
               opacity: 0;
               body.open & {
@@ -198,13 +214,6 @@ header.main {
                 animation: menuLinkAnimation 1s ease-in-out 0.6s 1 forwards;
               }
             }
-          }
-        }
-        nav.sub {
-          font-size: 1.2rem;
-          opacity: 0;
-          body.open & {
-            animation: menuLinkAnimation 1s ease-in-out 1s 1 forwards;
           }
         }
       }
