--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -39,7 +39,7 @@ header.main {
   align-items: center;
   @media (min-width: 60rem) {
     height: 50vh;
-    min-height: 25rem;
+    min-height: 15rem;
   }
   .top {
     //background: #fff;
@@ -144,11 +144,11 @@ header.main {
       max-width: 60rem;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
       flex-direction: column;
       @media (min-width: 35rem) {
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
       }
       .col {
         body.open & {
@@ -157,6 +157,10 @@ header.main {
         .info {
           font-size: 1.2rem;
           opacity: 0;
+          margin-top: 5rem;
+          @media (min-width: 35rem) {
+            margin-top: 0;
+          }
           body.open & {
             animation: menuLinkAnimation 1s ease-in-out 1s 1 forwards;
           }
@@ -233,8 +237,13 @@ header.main {
       margin-top: 10rem;
       margin-bottom: 5rem;
       @media (min-width: 60rem) {
-        font-size: 3rem;
+        font-size: 2.25rem;
         margin: 0;
+        max-width: 35rem;
+      }
+      @media (min-width: 85rem) {
+        font-size: 3rem;
+        max-width: 50rem;
       }
     }
   }
