--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -136,7 +136,7 @@ header.main {
       text-decoration: none;
       transition: all 0.15s ease-in-out;
       &:hover {
-        color: #aaa;
+        color: #0062FF;
       }
     }
     .container {
@@ -172,7 +172,7 @@ header.main {
             margin: 0 0 0.5rem;
           }
           a {
-            color: #aaa;
+            color: #0062FF;
             &:hover {
               text-decoration: underline;
             }
