--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -11,10 +11,10 @@
 
 @keyframes introAnimationMobile {
   0% {
-    transform: translateX(100%);
+    transform: translateY(100%);
   }
   100% {
-    transform: translateX(0%);
+    transform: translateY(0%);
   }
 }
 
@@ -36,6 +36,7 @@
     justify-content: center;
     align-items: center;
     height: 50vh;
+    transform: translateY(100%);
     @media (min-width: 37rem) {
       flex: 0 0 calc(100% / 2);
     }
@@ -45,21 +46,25 @@
       height: 100%;
     }
     &:nth-child(1) {
+      animation: introAnimationMobile 0.75s ease-in-out 0.5s 1 forwards;
       @media (min-width: 60rem) {
         animation: introAnimation 0.75s ease-in-out 0.5s 1 forwards;
       }
     }
     &:nth-child(2) {
+      animation: introAnimationMobile 0.75s ease-in-out 0.75s 1 forwards;
       @media (min-width: 60rem) {
         animation: introAnimation 0.75s ease-in-out 0.75s 1 forwards;
       }
     }
     &:nth-child(3) {
+      animation: introAnimationMobile 0.75s ease-in-out 1s 1 forwards;
       @media (min-width: 60rem) {
         animation: introAnimation 0.75s ease-in-out 1s 1 forwards;
       }
     }
     &:nth-child(4) {
+      animation: introAnimationMobile 0.75s ease-in-out 1.25s 1 forwards;
       @media (min-width: 60rem) {
         animation: introAnimation 0.75s ease-in-out 1.25s 1 forwards;
       }
