--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-  font: 16px/1.6em sans-serif;
+  font: 100%/1.6em sans-serif;
   background: #f6f6f6;
   animation: bodyBackgroundFadeIn 1.5s ease-in-out 0s 1 forwards;
 }
