--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -100,11 +100,12 @@
         @media (min-width: 35rem) {
           font-size: 1.5rem;
         }
-        @media (min-width: 70rem) {
+        @media (min-width: 85rem) {
           font-size: 2rem;
         }
       }
       p {
+        font-size: 1rem;
         margin: 0;
         font-weight: bold;
         position: relative;
@@ -118,7 +119,7 @@
           position: absolute;
           top: -0.5rem;
         }
-        @media (min-width: 70rem) {
+        @media (min-width: 85rem) {
           font-size: 1.25rem;
         }
       }
