--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -39,6 +39,7 @@
     justify-content: center;
     align-items: center;
     height: 50vh;
+    min-height: 20rem;
     transform: translateY(100%);
     @media (min-width: 37rem) {
       flex: 0 0 calc(100% / 2);
