--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -24,7 +24,7 @@
   transition: all 0.15s ease-in-out;
   @media (min-width: 60rem) {
     height: 40vh;
-    min-height: 20rem;
+    min-height: 15rem;
     overflow: hidden;
   }
   @media (min-width: 85rem) {
@@ -39,7 +39,7 @@
     justify-content: center;
     align-items: center;
     height: 50vh;
-    min-height: 20rem;
+    min-height: 15rem;
     transform: translateY(100%);
     @media (min-width: 37rem) {
       flex: 0 0 calc(100% / 2);
@@ -98,6 +98,7 @@
         font-size: 1.5rem;
         line-height: 1.2em;
         margin: 1rem 0;
+        text-shadow: 0 1px 2px rgba(0,0,0,0.25);
         @media (min-width: 35rem) {
           font-size: 1.5rem;
         }
@@ -112,8 +113,8 @@
         position: relative;
         &:before {
           content: "";
-          width: 3rem;
-          height: 0.16rem;
+          width: 2rem;
+          height: 0.15rem;
           background: $color-primary;
           //background: #0062ff;
           display: block;
