--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,10 @@ body {
 }
 
 .container {
-  width: 80%;
-  max-width: 90rem;
+  padding: 0 2rem;
   margin: 0 auto;
+  @media (min-width: 60rem) {
+    width: 80%;
+    max-width: 90rem;
+  }
 }
